cluster/adguard/adguardhome-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: adguardhome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: adguardhome
    app.kubernetes.io/version: v0.107.64
    helm.sh/chart: adguardhome-0.1.12
  name: adguardhome
spec:
  ports:
  - name: http-setup
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: dot
    port: 853
    protocol: TCP
    targetPort: 853
  selector:
    app.kubernetes.io/instance: adguardhome
    app.kubernetes.io/name: adguardhome
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: adguardhome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: adguardhome
    app.kubernetes.io/version: v0.107.64
    helm.sh/chart: adguardhome-0.1.12
  name: adguardhome
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: adguardhome
      app.kubernetes.io/name: adguardhome
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: adguardhome
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: adguardhome
        app.kubernetes.io/version: v0.107.64
        helm.sh/chart: adguardhome-0.1.12
    spec:
      containers:
      - image: adguard/adguardhome:v0.107.64
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        name: adguardhome
        ports:
        - containerPort: 3000
          name: http-setup
          protocol: TCP
        - containerPort: 53
          hostPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        - containerPort: 853
          hostPort: 853
          name: dot
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /opt/adguardhome/conf
          name: conf
        - mountPath: /opt/adguardhome/work
          name: work
      serviceAccountName: default
      volumes:
      - name: conf
        persistentVolumeClaim:
          claimName: adguardhome-conf
      - name: work
        persistentVolumeClaim:
          claimName: adguardhome-work
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  labels:
    app.kubernetes.io/instance: adguardhome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: adguardhome
    app.kubernetes.io/version: v0.107.64
    helm.sh/chart: adguardhome-0.1.12
  name: adguardhome
spec:
  ingressClassName: nginx
  rules:
  - host: adguard-ui.0xamit.com
    http:
      paths:
      - backend:
          service:
            name: adguardhome
            port:
              name: http
        path: /
        pathType: Prefix
  - host: dns.0xamit.com
    http:
      paths:
      - backend:
          service:
            name: adguardhome
            port:
              name: doh-https
        path: /dns-query
        pathType: Prefix
  tls:
  - hosts:
    - adguard-ui.0xamit.com
    - dns.0xamit.com
    secretName: 0xamit-com-tls
